<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DinnerPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcomeString">Welcome to Dinner Planner!\n\nHere you will be able to easily plan your dinner.\n\nOn the next page start by selecting number of participants.\nThen select your courses.\n\nWatch Magic Happen!</string>
    <string name="cost_">"Cost: "</string>
    <string name="choose">Choose</string>
    <string name="x">X</string>
    <string name="starter">Starter</string>
    <string name="dessert">Dessert</string>
    <string name="main_course">Main Course</string>
    <string name="choose_menu">Choose Menu</string>
    <string name="participants_">Participants:</string>
    <string name="total_cost_">Total cost:</string>
    <string name="instructions">Instructions</string>
    <string name="title_activity_ingredient_view">IngredientView</string>

    <string-array name="participants_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
        <string name="create">Create</string>
        <string name="clear">Clear</string>

</resources>
